# my-anuc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  l.ll  main.cpp  temp.txt  test.asm  test.s  test.sy  test.sysy
_note/: c++研究  ir框架  mem2ge研究.txt  plan.txt  活跃变量分析
_unittest/IR/: test.cc
lib/ADT/: alist.cpp  alist.h  blockDomTree.cpp  blockDomTree.h  callGraph.cpp  callGraph.h  livenessInfo.cpp  livenessInfo.h  rtti.cpp  rtti.h
lib/Analysis/: blockDFSCalculator.cpp  blockDFSCalculator.h  livenessAnalysis.cpp  livenessAnalysis.h  ssaLivenessAnalysis.cpp  ssaLivenessAnalysis.h
lib/Backend/: handleFunctionCall.cpp  handleFunctionCall.h  instEmit.cpp  instEmit.h  lowInst.cpp  lowInst.h  lowerToLIR.cpp  lowerToLIR.h  rvValue.cpp  rvValue.h  sbRegAlloc.cpp  sbRegAlloc.h  sbRegSpill.cpp  sbRegSpill.h
lib/IR/: core.cpp  core.h  irBuilder.cpp  irBuilder.h  type.cpp  type.h  value.cpp  value.h
lib/PassDriver/: passDriver.cpp  passDriver.h
lib/TransFormer/: scheduleBeforeRA.cpp  scheduleBeforeRA.h  ssa.cpp  ssa.h
